# better-calendar

./: .gitignore  CLI_GUIDE.md  README.md  demo.ipynb  pyproject.toml
examples/: exemples_calendar_hub.ipynb
src/better_calendar/: __init__.py  calendar.py  cli.py  date_universe.py  mapping.py  providers.py  utils.py
tests/: test_calendar_hub.py
