[project]
name = "better-calendar"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Caymaar", email = "julesmourgues@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "calplot>=0.1.7.5",
    "click>=8.1.8",
    "exchange-calendars>=4.5.6",
    "matplotlib>=3.9.4",
    "quantlib>=1.41",
    "workalendar>=17.0.0",
]

[project.scripts]
bcal = "better_calendar.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
]
